[package]
name = "tower-happy-eyeballs"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-service = "0.3"
tower-layer = "0.3"
tokio = { version = "1", features = ["time"] }
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
tower-util = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }
